--- a/src/renderer/common/style/transition.styl
+++ b/src/renderer/common/style/transition.styl
@@ -32,3 +32,14 @@
 
 .fade-map-leave-to
   transform translateY(calc(100vh - 40px))
+
+/*roll*/
+.roll-transform-leave-active,
+.roll-transform-enter-active
+  transition all .3s
+
+.roll-transform-enter
+  transform translateY(30px)
+
+.roll-transform-leave-to
+  transform translateY(-30px)
