--- a/src/renderer/common/style/index.styl
+++ b/src/renderer/common/style/index.styl
@@ -2,6 +2,7 @@
 @import './transition.styl'
 @import './layout.styl'
 @import './sidebar.styl'
+@import "font.styl"
 
 body
   -moz-osx-font-smoothing grayscale
@@ -32,3 +33,11 @@ a:hover
   cursor pointer
   color inherit
   text-decoration none
+
+@keyframes scroll
+  0%
+    color #327CC8
+  50%
+    color rgba(255, 255, 255, 0)
+  100%
+    color #327CC8
